# sapriLang

./: .gitignore  AI_DECISIONS.txt  AI_INDEX.txt  AI_NAMING.txt  AI_ROADMAP.txt  AI_SSON_PARSER.md  Cargo.toml  README.md  TODO.md  all.txt  cmd.md  gitignore  pack.txt  sapri-code-gen  tree.txt  urcm_rust_bundle.txt
ai/: Cargo.toml  Cargo2.toml  README.md  ai_speack.md  cmd.txt  loader.sson  pippo
ai/config/: config.sson  knowledge.sson  load.sson  memory.sson  response_templates.sson  validators.sson  wikipedia.sson
ai/src/: analyzer.rs  brain.rs  conversation.rs  knowledge.rs  learning.rs  lib.rs  main.rs  memory.rs  reader.rs  reasoner.rs  utils.rs  wiki_loader.rs
ai/sson/: conversation.sson  knowledge.sson  learning.sson  memory.rs  memory.sson  test.sson
code_gen/: Cargo.toml  README.md
code_gen/config/: config.sson  example_input.sson  rules.sson  types.sson
code_gen/src/: config.rs  engine.rs  generator.rs  handler.rs  main.rs  registry.rs
code_gen/sson/: config.sson  grammar.sson  (+5 more)
core/: Cargo.toml  Cargo.toml (aggiungi dipendenze)  Cargo.toml2  README.md  all.pack.txt  all.txt  unpack.sh
core-data/: Cargo.toml  data-core.md
core-data/src/: lib.rs
core-data/src/flatten/: mod.rs
core-data/src/registry/: mod.rs
core-data/src/schema/: mod.rs
core-data/src/stream/: mod.rs
core-data/src/table/: mod.rs
core-data/src/validation/: mod.rs
core/ai/src/: analyzer.rs  brain.rs  conversation.rs  knowledge.rs  lib.rs  memory.rs  reader.rs  reasoner.rs  utils.rs
core/base/: Cargo.toml  README.md  README.old.md
core/base/src/: atom.rs  atom_impl.rs  error.rs  lib.rs  schema.rs
core/base/src/bucket/: array.rs  mod.rs  sort.rs  strategy.rs
core/base/src/macros/: error.rs  eval.rs  fp.rs  mod.rs
core/core/: Cargo.toml
core/core/src/: command.rs  config.rs  config_loader.rs  executor.rs  hot_reload.rs  lib.rs  main.rs  runtime.rs
core/db/: Cargo.toml  HOW_DO.md  README.md  diz.sson  indici.md.md
core/db/config/: db_config.sson
core/db/schema/: clienti.sson
core/db/src/: database.rs  database_impl.rs  error.rs  error_impl.rs  header.rs  header_impl.rs  lib.rs  schema.rs  schema_impl.rs  table.rs  table_impl.rs  validator.rs  validator_impl.rs
core/db/sson/: db_modules.sson  db_schema.sson
core/diz/: Cargo.toml  HOW_DO.md  README.md  build.rs  diz.sson  diz_data.json
core/diz/lang/it/: filter_words.sson
core/diz/src/: lib.rs  main.rs
core/examples/: basic.rs  web_server.rs
core/extended/src/: context.rs  eval.rs
core/morph/: Cargo.toml  README2.md  README_URCM_SPEC.md  map_WORDS.md  wikipedia.sson  wikipedia_spec.sson
core/morph/ lang/it/: aff.sson  config.sson
core/morph/data/: it_IT.dic
core/morph/src/: adj.rs  export.rs  lib.rs  noun.rs  verb.rs
core/morph/src1/: adj_extractor.rs  aff_parser.rs  dic_parser.rs  lib.rs  morph_export.rs  noun_extractor.rs  sson_export.rs  verb_extractor.rs
core/morph/sson/: coding_table.sson  desinenze.sson  diz.sson  morfologia.sson
core/old/: Cargo.toml
core/old/src/: fp.rs  lib.rs  lib.rs (aggiungi)  obj.rs  scanner.rs
core/old/src/bucket/: mod.rs  mod.rs (aggiornato)  sort.rs  strategy.rs
core/old/src/core/: atom.rs  eval.rs  mod.rs  reactive.rs
core/old/src/definition/: registry.rs
core/old/src/io/: http.rs  mod.rs
core/old/src/macros/: cascade.rs  obj.rs
core/old/src/sson/: ast.rs  dict.rs  error.rs  lexer.rs  token.rs  validator.rs
core/old/src/web/: controller.rs  router.rs
core/old/tests/: test_macros.rs
core/rust_dsl/: Cargo.toml  README.md
core/rust_dsl/src/: atom_value.rs  context.rs  define.rs  lib.rs  prelude.rs  scan.rs
core/rust_dsl/src/scanner/: compiler.rs  mod.rs  parser.rs  token.rs
core/rust_dsl/tests/: integration_test.rs  test_atom_value.rs  test_context.rs  test_define.rs  test_scan.rs
core/src/: crud.rs  fp.rs  fp2.rs  lib.rs  lib.rs (aggiornato)  lib.rs (aggiungi alla fine, prima delle definizioni esistenti)  scanner.rs
core/src/bucket/: array.rs  sort.rs  strategy.rs
core/src/core/: atom_impl.rs  context.rs
core/src/io/: console.rs  file.rs  memory.rs
core/src/macros/: mod.rs  obj.rs  path.rs  reactive.rs  struct_with_keys.rs
core/src/sson/: ast.rs  error.rs  mod.rs  parser.rs  token.rs
core/src/web/: dto.rs  middleware.rs  mod.rs  server.rs
core/sson/: ATTENZIONE.md  Cargo.toml  TODO.md  TODO.sson  ai_learn_sson.md  stati_diagram.md  struct.txt  validatori.md
core/sson.old/: CRATE.md  Cargo.toml  TODO2.sson  cod_generatore.md  spec.sson
core/sson.old/src/: lib.rs  obj_adapter_impl.rs  state_machine_impl.rs  validator_impl.rs
core/sson/src/: error_impl.rs  lib.rs  registry_impl.rs  resolver_impl.rs
core/sson/tests/: simple_test.rs
core/sson/tests.not/: integration_test.rs  tests.txt
core/tests/: test_macros.rs
editor-server/: Cargo.toml
editor-server/src/: execute.rs  handlers.rs  main.rs  router.rs  websocket.rs
editor-server/src/services/: file_service.rs  mod.rs
editor-server/static/: editor.html  index.html
editor-server/static/css/: style.css
editor-server/static/js/: components.js  editor.js  main.js
examples/: struct.rs
interpreter/: Cargo.toml  test.urcm
interpreter/examples/: test.urcm  test2.urcm
interpreter/src/: lib.rs  live.rs  main.rs  parser.rs  vm.rs
interpreter/tests/: test_parser.rs
runtime/: Cargo.toml
sson/: Cargo.toml
sson/src/: ast.rs  dict.rs  error.rs  lib.rs  main.rs  parser.rs  token.rs
static/: script.js (opzionale, vuoto per ora)  style.css (opzionale, vuoto per ora)
tools/: README.md  firefox_ext.js  package.json  test_split.txt
tools/sson-gen/: Cargo.toml  README.md  project.ssd
tools/sson-gen/src/: basic_generator.rs  basic_generator2.rs  engine.rs  ferrograph_adapter.rs  format.rs  lib.rs  main.rs  naming.rs  riveter_xml.rs  tree_walker.rs  xml_parser.rs
tools/sson-gen/src/tree_walker/: impl.rs  mod.rs  tree_walker.rs
wiki_extract/: Cargo.toml  index_pages.sson  wiki_name_spaces.sson
wiki_extract/src/: checkpoint.rs  dic_parser.rs  extractor.rs  fast_extractor.rs  flag_map.rs  lib.rs  models.rs  namespace_filter.rs  storage.rs
(+2 files in other folders)
