[package]
name = "core-data"
version = "0.1.0"
edition = "2021"
description = "Data processing library for URCM/SAPRI - Flattening, Schema, Validation"

[dependencies]
# Core dipendenze (sempre necessarie)
urcm-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
rayon = "1.10"


# Feature: Flattening base (json-unflattening)
json-unflattening = { version = "0.1.5", optional = true }

# Feature: Fast JSON parsing (simd-json)
simd-json = { version = "0.17", optional = true }

# Feature: JSON Schema validation (jsonschema)
jsonschema = { version = "0.40", optional = true }

# Feature: Schema inference (genson-rs)
genson-rs = { version = "0.2", optional = true }

# Feature: Streaming JSON (pjson-rs)
pjson-rs = { version = "0.5", optional = true }

# Feature: Apache Arrow backend
arrow = { version = "55", optional = true }
datafusion = { version = "42", optional = true }

[features]
default = ["flattening", "fast-json"]  # abilita queste di default

# Feature atomiche
flattening = ["dep:json-unflattening"]
fast-json = ["dep:simd-json"]
validation = ["dep:jsonschema", "dep:genson-rs"]
streaming = ["dep:pjson-rs"]
arrow-backend = ["dep:arrow", "dep:datafusion"]

# Feature aggregate (comode per l'utente)
full = ["flattening", "fast-json", "validation", "streaming"]
analytics = ["arrow-backend"]  # per chi vuole analisi pesanti

[lib]
name = "core_data"
path = "src/lib.rs"
