[package]
name = "urcm-core"
version = "0.3.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"], optional = true }
thiserror = "2.0" 

# Web server dependencies (opzionali)
axum = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
chrono = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[features]
default = ["http"]
http = ["dep:reqwest"]
web = ["dep:axum", "dep:tokio", "dep:chrono", "dep:tower-http", "dep:tracing", "dep:tracing-subscriber"]

[lib]
name = "urcm_core"
path = "src/lib.rs"
