[package]
name = "sson"
version = "0.1.0"
edition = "2021"
description = "Sapri Structured Object Notation — Parser, Dizionario Piatto & Validatore URCM"
license = "MIT"

[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "sson"
path = "src/main.rs"
