[package]
name = "sapri_wiki_extract"
version = "0.1.0"
edition = "2021"

[dependencies]
sapri_core = { path = "../core/core" }
sapri_diz = { path = "../core/diz" }
sapri_morph = { path = "../core/morph" }
bzip2 = "0.4"
quick-xml = "0.31"
regex = "1.10"
lazy_static = "1.4"        # ← AGGIUNGI
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.10"

[[bin]]
name = "wiki-extract"
path = "src/bin/wiki_extract.rs"
