[package]
name = "sapri_db"
version = "0.1.0"
edition = "2021"

[dependencies]
sapri_base = { path = "../base" }
sapri_obj = { path = "../obj" }
sapri_sson = { path = "../sson" }
sapri_diz = { path = "../diz" }

# Utilità
regex = "1.10"
once_cell = "1.19"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true
