[package]
name = "sapri_sson"
version = "2.0.0"
edition = "2021"
authors = ["Ettore Bevilacqua <saprizero@proton.me>"]
description = """
SSON Parser - Formato dichiarativo per specifiche, vincoli e macchine a stati.
Supporta validazione, riferimenti, deduplicazione e modalità strict/generative.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/SapriZero/sapriLang"
readme = "README.md"
keywords = ["sson", "parser", "validator", "urcm", "sapri"]
categories = ["parsing", "data-structures", "validation"]

[features]
default = ["std"]
std = []
serde = ["dep:serde", "dep:serde_json"]
full = ["std", "serde"]

[dependencies]
# Core interni
sapri_base = { path = "../base" }
sapri_obj = { path = "../obj" }

# Utilità
regex = "1.10"
once_cell = "1.19"

# Serializzazione (opzionale)
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
# Test utilities
pretty_assertions = "1.4"

[lints]
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "sapri_sson"
path = "src/lib.rs"
test = true
doctest = true
bench = false

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
