[package]
name = "sapri_sson"
version = "1.0.0"
edition = "2021"

[dependencies]
sapri_base = { path = "../base" }
sapri_obj = { path = "../obj" }
regex = "1.10"
once_cell = "1.19"

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dependencies.serde]
version = "1.0"
optional = true

[dependencies.serde_json]
version = "1.0"
optional = true
